--- a/index.html
+++ b/index.html
@@ -8,10 +8,64 @@
     <link rel="stylesheet" href="./dist/styles.css">
 
 </head>
-<h1>Tailwind</h1>
-<p>Tailwindxsxss</p>
+
 
 <body>
+    <!-- <div class="container mx-auto bg-green-200 ">
+        <nav class="flex justify-between items-center">
+            <div class="h-16 w-16">
+                <a href="#"><img class="" src="./public/mainlogo.png" alt=""></a> -->
+    <!-- </div>
+            <ul class="hidden md:flex space-x-6">
+                <li><a class="text-black font-medium hover:text-white" href="#">Services</a></li>
+                <li><a class="text-black  font-medium hover:text-white" href="#">Pricing</a></li>
+                <li><a class="text-black font-medium hover:text-white" href="#">About</a></li>
+                <li><a class="text-black  font-medium hover:text-white" href="#">Contact</a></li>
+            </ul>
+            <button
+                class="hidden md:block bg-green-500 px-6 py-2 rounded-full text-white hover:bg-blue-300  font-medium">Signup</button>
+            <button class="md:hidden mobile-icon">
+                <svg class="h-10 w-10 mr-3" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M4 6H20M4 12H20M4 18H20" stroke="#000000" stroke-width="2" stroke-linecap="round"
+                        stroke-linejoin="round" />
+                </svg>
+            </button>
+        </nav>
+    </div> -->
+
+
+    <!-- .........................header  section.....................-->
+    <div class="container mx-auto ">
+        <nav class="flex justify-around bg-primary items-center">
+
+            <a href="#"><img class="h-20 w-20" src="./public/mainlogo.png" alt=""></a>
+
+            <ul class="flex space-x-3">
+                <li><a href="#">Services</a></li>
+                <li>
+                    <href="#">Pricing</href=>
+                </li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+            <ul class="flex space-x-3">
+                <li><img src="./public/cart symbol.png"></li>
+                <li><img src="./public/profile.png"></li>
+                <li><img src="./public/search.png"></li>+
+            </ul>
+
+            <ul class="flex space-x-3">
+                <li><button class="px-5 py-3 hover:bg-gradient-to-r from-buttongradient1 to-buttongradient2 rounded-lg">
+                        Login
+                    </button>
+                </li>
+                <li><button
+                        class="px-5 py-3 hover:bg-gradient-to-r from-buttongradient1 to-buttongradient2 cursor-pointer rounded-lg ">Sign
+                        Up</button></li>
+            </ul>
+        </nav>
+
+    </div>
 
 </body>
 
