hero section starting commit

--- a/index.html
+++ b/index.html
@@ -11,29 +11,6 @@
 
 
 <body>
-    <!-- <div class="container mx-auto bg-green-200 ">
-        <nav class="flex justify-between items-center">
-            <div class="h-16 w-16">
-                <a href="#"><img class="" src="./public/mainlogo.png" alt=""></a> -->
-    <!-- </div>
-            <ul class="hidden md:flex space-x-6">
-                <li><a class="text-black font-medium hover:text-white" href="#">Services</a></li>
-                <li><a class="text-black  font-medium hover:text-white" href="#">Pricing</a></li>
-                <li><a class="text-black font-medium hover:text-white" href="#">About</a></li>
-                <li><a class="text-black  font-medium hover:text-white" href="#">Contact</a></li>
-            </ul>
-            <button
-                class="hidden md:block bg-green-500 px-6 py-2 rounded-full text-white hover:bg-blue-300  font-medium">Signup</button>
-            <button class="md:hidden mobile-icon">
-                <svg class="h-10 w-10 mr-3" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M4 6H20M4 12H20M4 18H20" stroke="#000000" stroke-width="2" stroke-linecap="round"
-                        stroke-linejoin="round" />
-                </svg>
-            </button>
-        </nav>
-    </div> -->
-
-
     <!-- .........................header  section.....................-->
     <div class="container mx-auto ">
         <nav class="flex justify-around bg-primary items-center">
@@ -64,8 +41,12 @@
                         Up</button></li>
             </ul>
         </nav>
-
     </div>
+    <!-- ........................................................................hero section.................................................. -->
+
+    <section>
+        
+    </section>
 
 </body>
 
