featured course completed

--- a/index.html
+++ b/index.html
@@ -6,13 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>landingpage 2</title>
     <link rel="stylesheet" href="./dist/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Saira:ital,wght@0,100..900;1,100..900&family=Vibes&family=Volkhov:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rowdies:wght@300;400;700&family=Saira:ital,wght@0,100..900;1,100..900&family=Vibes&family=Volkhov:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Righteous&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rowdies:wght@300;400;700&family=Saira:ital,wght@0,100..900;1,100..900&family=Vibes&family=Volkhov:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+        rel="stylesheet">
 
 </head>
 
 
 <body>
     <!-- .........................header  section.....................-->
-    <div class="container mx-auto ">
+    <!-- <div class="container mx-auto ">
         <nav class="flex justify-around bg-primary items-center">
 
             <a href="#"><img class="h-20 w-20" src="./public/mainlogo.png" alt=""></a>
@@ -41,13 +56,174 @@
                         Up</button></li>
             </ul>
         </nav>
-    </div>
+    </div> -->
     <!-- ........................................................................hero section.................................................. -->
-
-    <section>
-        
+    <!-- <section class="container overflow-x-hidden">
+        <div class="bg-gradient-to-r from-herogradient1 to-herogradient2 flex flex-col justify-around w-full">
+            <div class="flex flex-col">
+                <p>Successful coaches are visionaries</p>
+                <h1>Good coaching is good teaching & nothing else.</h1>
+                <div>
+                    <button>View course</button>
+                    <p>Get Free Consultation</p>
+                </div>
+            </div> -->
+    <!-- ....................................................heroleft ................................................................-->
+    <!-- <div class="flex relative">
+                <img class="h-96" src="./public/women-laptop.png" alt="Woman with Laptop">
+                <img class="h-96" src="./public/whiteimg.png" alt="Background Illustration">
+            </div>
+        </div>
     </section>
+    <br> -->
+    <!-- .........................................................featuredcourse............................................................. -->
+    <section class="container overflow-x-hidden bg-gradient-to-r from-featuresbg1 to-featuresbg2 w-full">
+        <img class="px-10 md:px-10 lg:px-40" src="./public/featurescourse.png">
+        <!-- Header Section -->
+        <div class="w-full flex flex-col justify-center items-center p-6 space-y-5 font-normal">
+            <h1 class="text-center text-2xl md:text-3xl lg:text-4xl font-bold font-Rowdies">Featured <span
+                    class="text-[#4883FF]">Course</span>
+            </h1>
+            <p class="text-center text-base md:text-lg lg:text-xl font-Righteous text-[#000000] ">
+                The featured courses are we invented our teaching part
+            </p>
+        </div>
+        <!-- Cards Section -->
+        <div class="px-4 sm:px-8 lg:px-36 py-5 flex flex-wrap gap-6 items-center justify-center">
+            <!--card1 -->
+            <div class="w-full sm:w-[48%] lg:w-[30%] bg-primary rounded-xl shadow-lg">
+                <div>
+                    <img class="h-56 w-full object-cover rounded-t-xl" src="./public/course1.png" alt="Course Image">
+                </div>
+                <div class="p-4 space-y-3">
+                    <div class="flex justify-between">
+                        <p class="card-students ">1,957 Students</p>
+                        <p class="card-students ">01h 59m</p>
+                    </div>
+                    <p class="card-description ">
+                        Motion Graphics: Create a Nice Typography Animation
+                    </p>
+                    <div class="flex justify-between items-center">
+                        <p class="card-amount">Rs.499</p>
+                        <img class="card-amountr" src="./public/addtocart.png" alt="Add to Cart">
+                    </div>
+                </div>
+            </div>
+            <!-- card2 -->
+            <div class="w-full sm:w-[48%] lg:w-[30%] bg-primary rounded-xl shadow-lg">
+                <div>
+                    <img class="h-56 w-full object-cover rounded-t-xl" src="./public/course1.png" alt="Course Image">
+                </div>
+                <div class="p-4 space-y-3">
+                    <div class="flex justify-between">
+                        <p class="card-students ">9,575 Students</p>
+                        <p class="card-students ">01h 59m</p>
+                    </div>
+                    <p class="card-description ">
+                        Advance PHP knowledge with JS to
+                        make smart web
+                    </p>
+                    <div class="flex justify-between items-center">
+                        <p class="card-amount">Rs.499</p>
+                        <img class="card-amountr" src="./public/addtocart.png" alt="Add to Cart">
+                    </div>
+                </div>
+            </div>
+            <!-- card3-->
+            <div class="w-full sm:w-[48%] lg:w-[30%] bg-primary rounded-xl shadow-lg">
+                <div>
+                    <img class="h-56 w-full object-cover rounded-t-xl" src="./public/course1.png" alt="Course Image">
+                </div>
+                <div class="p-4 space-y-3">
+                    <div class="flex justify-between">
+                        <p class="card-students ">2957 Students</p>
+                        <p class="card-students ">02h 49m</p>
+                    </div>
+                    <p class="card-description ">
+                        Education Software and PHP and JS
+                        System Script
+                    </p>
+                    <div class="flex justify-between items-center">
+                        <p class="card-amount">Rs.499</p>
+                        <img class="card-amountr" src="./public/addtocart.png" alt="Add to Cart">
+                    </div>
+                </div>
+            </div>
+            <!-- card4 -->
+            <div class="w-full sm:w-[48%] lg:w-[30%] bg-primary rounded-xl shadow-lg">
+                <div>
+                    <img class="h-56 w-full object-cover rounded-t-xl" src="./public/course1.png" alt="Course Image">
+                </div>
+                <div class="p-4 space-y-3">
+                    <div class="flex justify-between">
+                        <p class="card-students ">5,457 Students</p>
+                        <p class="card-students ">01h 49m</p>
+                    </div>
+                    <p class="card-description ">
+                        The Complete Financial Analyst
+                        Training & Investing
+                    </p>
+                    <div class="flex justify-between items-center">
+                        <p class="card-amount">Rs.499</p>
+                        <img class="card-amountr" src="./public/addtocart.png" alt="Add to Cart">
+                    </div>
+                </div>
+            </div>
+            <!-- card5 -->
+            <div class="w-full sm:w-[48%] lg:w-[30%] bg-primary rounded-xl shadow-lg">
+                <div>
+                    <img class="h-56 w-full object-cover rounded-t-xl" src="./public/course1.png" alt="Course Image">
+                </div>
+                <div class="p-4 space-y-3">
+                    <div class="flex justify-between">
+                        <p class="card-students ">595 Students</p>
+                        <p class="card-students ">01h 49m</p>
+                    </div>
+                    <p class="card-description ">
+                        Marketing 2023: Complete Guide To
+                        Instagram Growth
+                    </p>
+                    <div class="flex justify-between items-center">
+                        <p class="card-amount">Rs.499</p>
+                        <img class="card-amountr" src="./public/addtocart.png" alt="Add to Cart">
+                    </div>
+                </div>
+            </div>
+            <!-- card6-->
+            <div class="w-full sm:w-[48%] lg:w-[30%] bg-primary rounded-xl shadow-lg">
+                <div>
+                    <img class="h-56 w-full object-cover rounded-t-xl" src="./public/course1.png" alt="Course Image">
+                </div>
+                <div class="p-4 space-y-3">
+                    <div class="flex justify-between">
+                        <p class="card-students ">458 Students</p>
+                        <p class="card-students ">03h 00m</p>
+                    </div>
+                    <p class="card-description ">
+                        Learn 3D Modelling and Design
+                        for Beginners
+                    </p>
+                    <div class="flex justify-between items-center">
+                        <p class="card-amount">Rs.499</p>
+                        <img class="card-amountr" src="./public/addtocart.png" alt="Add to Cart">
+                    </div>
+                </div>
+            </div>
+            <!--card end -->
+            <div>
+                <button
+                    class="px-2 py-2 text-primary bg-gradient-to-r from-buttongradient1 to-buttongradient2 rounded-md">explore
+                    courses</button>
+            </div>
 
+
+
+        </div>
+    </section>
+    <!-- .........................................................learn with....................................................................... -->
+    <section>
+
+    </section>
 </body>
 
 </html>
