learn width 90% completed

--- a/index.html
+++ b/index.html
@@ -221,7 +221,59 @@
         </div>
     </section>
     <!-- .........................................................learn with....................................................................... -->
-    <section>
+    <section class="container overflow-x-hidden bg-gradient-to-r from-coursesbg1 to-coursesbg2 w-full">
+        <div class="flex justify-center items-center flex-col">
+            <h1 class="font-Righteous text-4xl text-primary pt-6 text-center p-3 ">Why <span
+                    class="text-[#0E38CD]">learn
+                </span>with our courses?</h1>
+            <p class="font-saira text-2xl text-primary pt-6 p-3 flex  text-justify sm:text-justify lg:text-center ">
+                We are providing the best courses and top classes.And <br> extraordinary placement training.....</p>
+        </div>
+        <div class="px-4 pt-10 sm:px-8 lg:px-36 py-5 flex flex-wrap gap-6 items-center justify-center">
+            <!-- card1 -->
+            <div class="w-full sm:w-[48%] lg:w-[29%] flex justify-center items-center flex-col space-y-5">
+                <div>
+                    <img src="./public/learn.png">
+                </div>
+                <div class="flex justify-center items-center flex-col space-y-4">
+                    <p class="course-card-heading ">01. Learn</p>
+                    <p class="course-card-description">Learn continually. There is always
+                        “one more thing”to learn.</p>
+                </div>
+            </div>
+            <!--  -->
+            <div>
+                <!-- Vertical line image -->
+                <img src="./public/vertical line.png" class="block mx-auto sm:rotate-0 rotate-90 w-full h-auto">
+            </div>
+            <!-- card 2 -->
+            <div class="w-full sm:w-[48%] lg:w-[29%] flex justify-center items-center flex-col space-y-5">
+                <div>
+                    <img src="./public/gra.png">
+                </div>
+                <div class="flex justify-center items-center flex-col space-y-4">
+                    <p class="course-card-heading ">02. Graduate</p>
+                    <p class="course-card-description">Be bold,be courageous,
+                        be your best..</p>
+                </div>
+            </div>
+            <!--  -->
+            <div>
+                <!-- Vertical line image -->
+                <img src="./public/vertical line.png" class="block mx-auto sm:rotate-0 rotate-90 w-full h-auto">
+            </div>
+            <!-- card3 -->
+            <div class="w-full sm:w-[48%] lg:w-[29%] flex justify-center items-center flex-col space-y-5">
+                <div>
+                    <img src="./public/learn.png">
+                </div>
+                <div class="flex justify-center items-center flex-col space-y-4">
+                    <p class="course-card-heading ">03. Work</p>
+                    <p class="course-card-description">Great companies are built in
+                        the office,with hard work put in by team</p>
+                </div>
+            </div>
+        </div>
 
     </section>
 </body>
