--- a/index.html
+++ b/index.html
@@ -221,7 +221,16 @@
         </div>
     </section>
     <!-- .........................................................learn with....................................................................... -->
-    <section class="container overflow-x-hidden bg-gradient-to-r from-coursesbg1 to-coursesbg2 w-full">
+    <section class="container overflow-x-hidden bg-gradient-to-r from-coursesbg1 to-coursesbg2 w-full relative">
+        <div class="relative h-0">
+            <!-- Positioned decorative images -->
+            <img class="absolute top-24 -left-5 w-16 sm:w-20 md:w-24 lg:w-32" src="./public/rectsmall1.png"
+                alt="Small Rectangle">
+            <img class="absolute top-20 left-5 w-20 sm:w-24 md:w-28 lg:w-36" src="./public/rectmid2.png"
+                alt="Mid Rectangle">
+            <img class="absolute top-10 left-5 sm:w-36 md:w-40 lg:w-48" src="./public/rectlarge3.png"
+                alt="Large Rectangle">
+        </div>
         <div class="flex justify-center items-center flex-col">
             <h1 class="font-Righteous text-4xl text-primary pt-6 text-center p-3 ">Why <span
                     class="text-[#0E38CD]">learn
@@ -244,7 +253,7 @@
             <!--  -->
             <div>
                 <!-- Vertical line image -->
-                <img src="./public/vertical line.png" class="block mx-auto sm:rotate-0 rotate-90 w-full h-auto">
+                <img src="./public/vertical line.png" class="block mx-auto sm:rotate-0 rotate-90 w-full h-auto ">
             </div>
             <!-- card 2 -->
             <div class="w-full sm:w-[48%] lg:w-[29%] flex justify-center items-center flex-col space-y-5">
