TOP CATEGORIES COMPLETED

--- a/index.html
+++ b/index.html
@@ -283,8 +283,89 @@
                 </div>
             </div>
         </div>
+        <!-- ....................................................top categories............................................................ -->
 
-    </section>
+        <section class="container overflow-x-hidden w-full bg-gradient-to-b from-categoriesbg1 to-categoriesbg2 pb-12 ">
+            <div class="flex justify-center items-center flex-col">
+                <h1 class="font-Righteous text-4xl text-[#323232] pt-6 text-center p-3">
+                    Top <span class="text-[#0E38CD]">Categories</span>
+                </h1>
+                <p class="font-Righteous text-2xl text-[#4E596B] pt-6 p-3 text-center">
+                    100+ unique online course list designs
+                </p>
+            </div>
+            <!-- Card container -->
+            <div class="grid grid-cols-1 sm:grid-cols-1 lg:grid-cols-3 xl:grid-cols-6 gap-6 px-4 sm:px-8 lg:px-36 py-5">
+                <!-- Card 1 -->
+                <div class="bg-primary rounded-xl shadow-lg space-y-5 p-10">
+                    <div class="flex items-center justify-center">
+                        <img class="" src="./public/category1.png" alt="Category 1">
+                    </div>
+                    <div class=" flex flex-col justify-center  items-center px-5 space-y-5">
+                        <p class="categories-name">Digital Marketing</p>
+                        <p class="categories-description">25 Courses</p>
+                    </div>
+                </div>
+                <!-- card 2 -->
+                <div class="bg-primary rounded-xl shadow-lg space-y-5 p-10">
+                    <div class="flex items-center justify-center">
+                        <img class="" src="./public/cat2.png" alt="Category 1">
+                    </div>
+                    <div class=" flex flex-col justify-center  items-center px-5 space-y-5">
+                        <p class="categories-name">Web
+                            Development</p>
+                        <p class="categories-description">16 Courses</p>
+                    </div>
+                </div>
+                <!-- card 3 -->
+                <div class="bg-primary rounded-xl shadow-lg space-y-5 p-10">
+                    <div class="flex items-center justify-center">
+                        <img class="" src="./public/cat3.png" alt="Category 1">
+                    </div>
+                    <div class=" flex flex-col justify-center  items-center px-5 space-y-5">
+                        <p class="categories-name">Art &
+                            Humanities</p>
+                        <p class="categories-description">76 Courses</p>
+                    </div>
+                </div>
+                <!-- card 4 -->
+                <div class="bg-primary rounded-xl shadow-lg space-y-5 p-10">
+                    <div class="flex items-center justify-center">
+                        <img class="" src="./public/cat4.png" alt="Category 1">
+                    </div>
+                    <div class=" flex flex-col justify-center  items-center px-5 space-y-5">
+                        <p class="categories-name">Personal
+                            Development</p>
+                        <p class="categories-description">22 Courses</p>
+                    </div>
+                </div>
+                <!-- card 5 -->
+                <div class="bg-primary rounded-xl shadow-lg space-y-5 p-10">
+                    <div class="flex items-center justify-center">
+                        <img class="" src="./public/cat5.png" alt="Category 1">
+                    </div>
+                    <div class=" flex flex-col justify-center  items-center px-5 space-y-5">
+                        <p class="categories-name">IT and
+                            Software</p>
+                        <p class="categories-description">110 Courses</p>
+                    </div>
+                </div>
+                <!-- card 6 -->
+                <div class="bg-primary rounded-xl shadow-lg space-y-5 p-10">
+                    <div class="flex items-center justify-center">
+                        <img class="" src="./public/cat6.png" alt="Category 1">
+                    </div>
+                    <div class=" flex flex-col justify-center  items-center px-5 space-y-5">
+                        <p class="categories-name">Graphic
+                            Design</p>
+                        <p class="categories-description">85 Courses</p>
+                    </div>
+                </div>
+                <!-- card end -->
+
+            </div>
+        </section>
+
 </body>
 
 </html>
