subscribe box completed

--- a/index.html
+++ b/index.html
@@ -366,6 +366,45 @@
             </div>
         </section>
 
+        <!-- ..................................................SUBSCRIBE BOX................................................................ -->
+        <section class="bg-primary">
+            <div class="pt-11 pb-11 flex justify-center items-center">
+                <div
+                    class="w-[90%] md:w-[75%] lg:h-60 flex flex-col justify-center items-center bg-gradient-to-r from-subbg1 via-subbg2 to-subbg3 space-y-5 py-16 md:py-40 rounded-xl relative">
+                    <!-- Left Images -->
+                    <div class="hidden md:block">
+                        <img class="absolute top-[15px] left-[15px]" src="./public/sub1.png" alt="Image 1">
+                        <img class="absolute top-[122px] left-[122px]" src="./public/sub2.png" alt="Image 2">
+                        <img class="absolute bottom-[15px] left-[15px]" src="./public/sub3.png" alt="Image 3">
+                        <img class="absolute top-[15px]" src="./public/triangle.png">
+                    </div>
+                    <!-- Main Content -->
+                    <p class="font-Righteous text-2xl md:text-4xl text-center text-primary leading-snug px-4">
+                        Subscribe For Get Update <br> Every New Courses
+                    </p>
+                    <p class="font-Righteous text-sm md:text-base text-center text-primary px-4">
+                        20k+ students daily learn with Eduvi. Subscribe for new courses.
+                    </p>
+                    <div class="flex flex-col md:flex-row items-center space-y-3 md:space-y-0">
+                        <input type="email" placeholder="Enter your email"
+                            class="w-[90%] md:w-auto px-4 py-2 text-primary bg-transparent border rounded-lg md:rounded-l-lg focus:outline-none focus:ring-2 focus:bg-[#0E38CD]">
+                        <button
+                            class="w-[90%] md:w-auto px-4 py-2 text-white bg-[#0E38CD] rounded-lg md:rounded-r-lg hover:bg-[#0E38CD] focus:outline-none focus:ring-2">
+                            Subscribe
+                        </button>
+                    </div>
+                    <!-- Right Images -->
+                    <div class="hidden md:block">
+                        <img class="absolute top-[15px] right-[15px]" src="./public/sub1.png" alt="Image 1">
+                        <img class="absolute top-[122px] right-[122px]" src="./public/sub2.png" alt="Image 2">
+                        <img class="absolute bottom-[15px] right-[15px]" src="./public/sub3.png" alt="Image 3">
+                        <img class="absolute -left-[58px]" src="./public/triangle.png">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
 </body>
 
 </html>
