--- a/index.html
+++ b/index.html
@@ -398,10 +398,25 @@
                         <img class="absolute top-[15px] right-[15px]" src="./public/sub1.png" alt="Image 1">
                         <img class="absolute top-[122px] right-[122px]" src="./public/sub2.png" alt="Image 2">
                         <img class="absolute bottom-[15px] right-[15px]" src="./public/sub3.png" alt="Image 3">
-                        <img class="absolute -left-[58px]" src="./public/triangle.png">
+                        <img class="absolute -left-[58px] hidden md:block" src="./public/triangle.png">
                     </div>
                 </div>
             </div>
+        </section>
+        <!-- ................................................................play............................................................. -->
+        <section class="bg-primary pt-52">
+            <div class="flex justify-center items-center relative">
+                <img class="h-96 " src="./public/girlblacklap.png">
+                <img class="absolute -top-[108px] right-[178px]" src="./public/triangle.png">
+                <img class="absolute h-28" src="./public/playbtn.png">
+                <img class="absolute h-36 bottom-0 right-[345px] hidden md:hidden lg:block"
+                    src="./public/playcolors.png">
+            </div>
+        </section>
+        <!-- ......................................................................Testimonials............................................... -->
+
+        <section class="bg-gradient-to-r from-testimonialsbg1 to-testimonialsbg2 ">
+
         </section>
 
 
