--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
         </div>
     </section>
     <!-- .........................................................learn with....................................................................... -->
-    <section class="container overflow-x-hidden bg-gradient-to-r from-coursesbg1 to-coursesbg2 w-full relative">
+    <section class="container bg-gradient-to-r from-coursesbg1 to-coursesbg2 w-full relative">
         <div class="relative h-0">
             <!-- Positioned decorative images -->
             <img class="absolute top-24 -left-5 w-16 sm:w-20 md:w-24 lg:w-32" src="./public/rectsmall1.png"
@@ -404,7 +404,7 @@
             </div>
         </section>
         <!-- ................................................................play............................................................. -->
-        <section class="bg-primary pt-52">
+        <section class="bg-primary pt-52 pb-32">
             <div class="flex justify-center items-center relative">
                 <img class="h-96 " src="./public/girlblacklap.png">
                 <img class="absolute -top-[108px] right-[178px]" src="./public/triangle.png">
@@ -415,9 +415,84 @@
         </section>
         <!-- ......................................................................Testimonials............................................... -->
 
-        <section class="bg-gradient-to-r from-testimonialsbg1 to-testimonialsbg2 ">
+        <section
+            class="flex justify-center items-center pt-28 relative bg-gradient-to-r from-testimonialsbg1 to-testimonialsbg2 ">
+            <div class="bg-gradient-to-r from-testimonialbg1 to-testimonialbg2 ">
+                <h1 class="text-4xl nav-font text-center text-bluecolor">
+                    Testimonials
+                </h1>
+                <p class="text-xl nav-font text-center">
+                    What our students say about us
+                </p>
+                <div class="flex flex-wrap justify-center relative mt-40 ml-2 mr-2 gap-4">
+                    <!-- card 1 -->
+                    <div
+                        class="bg-white  p-2 w-full sm:w-[20rem] md:w-[26rem] h-[15rem] rounded-lg relative z-10 sm:-mr-5 md:pr-6 mb-4 md:mb-0">
+                        <img src="./public/testimonialsimg.png" alt=""
+                            class="p-4 rounded-2xl absolute -top-14 left-1/2 transform -translate-x-1/2" />
+                        <p class="mt-12 text-left pl-1 pr-2">
+                            Such an amazing trainer and easily understood the entire syllabus.
+                            The guidance was superb and the way of explaining was excellent.
+                        </p>
+                        <div class="flex justify-start mt-4 pl-1 pr-2">
+                            <img src="./public/Star 6.png" alt="" class="p-1" />
+                            <img src="./public/Star 6.png" alt="" class="p-1" />
+                            <img src="./public/Star 6.png" alt="" class="p-1" />
+                            <img src="./public/Star 6.png" alt="" class="p-1" />
+                            <img src="./public/Star 10.png" alt="" class="p-1" />
+                        </div>
+                    </div>
+                    <!-- Card 2 -->
+                    <div
+                        class="bg-white  p-2 w-full sm:w-[20rem] md:w-[26rem] h-[15rem] rounded-lg relative z-20 -mt-10 mb-4 md:mb-0">
+                        <img src="./public/testimonialsimg.png" alt=""
+                            class="p-4 rounded-2xl absolute -top-14 left-1/2 transform -translate-x-1/2" />
+                        <p class="mt-12 text-left pl-1 pr-2">
+                            Such an amazing trainer and easily understood the entire syllabus.
+                            The guidance was superb and the way of explaining was excellent.
+                        </p>
+                        <div class="flex justify-start mt-4 pl-1 pr-2">
+                            <img src="./public/teststar.png" alt="" class="p-1" />
+                            <img src="./public/teststar.png" alt="" class="p-1" />
+                            <img src="./public/teststar.png" alt="" class="p-1" />
+                            <img src="./public/teststar.png" alt="" class="p-1" />
+                            <img src="./public/testemptystar.png" alt="" class="p-1" />
+                        </div>
+                    </div>
+                    <!-- card 3 -->
+                    <div
+                        class="bg-white p-2 w-full sm:w-[20rem] md:w-[26rem] h-[15rem] rounded-lg relative z-10 sm:-ml-5 md:pl-6">
+                        <img src="./public/testimonialsimg.png" alt=""
+                            class="p-4 rounded-2xl absolute -top-14 left-1/2 transform -translate-x-1/2" />
+                        <p class="mt-12 text-left pl-1 pr-2">
+                            Such an amazing trainer and easily understood the entire syllabus.
+                            The guidance was superb and the way of explaining was excellent.
+                        </p>
+                        <div class="flex justify-start mt-4 pl-1 pr-2">
+                            <img src="./public/teststar.png" alt="" class="p-1" />
+                            <img src="./public/teststar.png" alt="" class="p-1" />
+                            <img src="./public/teststar.png" alt="" class="p-1" />
+                            <img src="./public/teststar.png" alt="" class="p-1" />
+                            <img src="./public/testemptystar.png" alt="" class="p-1" />
+                        </div>
+                    </div>
+                </div>
 
+                <div class="flex mt-28 pb-12 items-end gap-2 justify-end pr-5">
+                    <button class="p-3 rounded-full hover:shadow-lg hover:border-2 hover:border-amber-500">
+                        <img class="transform transition duration-300 ease-in-out hover:scale-10 hover:brightness-125 hover:contrast-125"
+                            src="./public/testleftarrow.png" alt="Left Arrow">
+                    </button>
+                    <button class="p-3 rounded-full hover:shadow-lg hover:border-2 hover:border-amber-500">
+                        <img class="transform transition duration-300 ease-in-out hover:scale-10 hover:brightness-125 hover:contrast-125"
+                            src="./public/testrightarrow.png" alt="Right Arrow">
+                    </button>
+                </div>
+            </div>
+            <img src="./public/Ellipse 1217.png" alt="" class="absolute top-2 left-2 z-10" />
         </section>
+        <!-- ............................................footer..................................................................... -->
+
 
 
 </body>
