--- a/index.html
+++ b/index.html
@@ -492,6 +492,72 @@
             <img src="./public/Ellipse 1217.png" alt="" class="absolute top-2 left-2 z-10" />
         </section>
         <!-- ............................................footer..................................................................... -->
+        <section class="bg-gradient-to-r from-footerbg2 to-footerbg1 p-6">
+            <div class="container mx-auto flex flex-col md:flex-row justify-between">
+                <!-- First Section -->
+                <div
+                    class="w-full md:w-[30%] flex flex-col justify-center items-center md:items-start text-center md:text-left mb-6 md:mb-0 md:pb-10 space-y-7">
+                    <p class="text-[#0A033C] font-Righteous text-2xl">Connect</p>
+                    <div class="bg-transparent">
+                        <img class="bg-transparent h-16" src="./public/logo.png" alt="Logo">
+                    </div>
+                    <p class="text-[#000000] w-[80%]">
+                        Sri Jagannath Nivas, 8-1-164/345/A/1, Pragati Colony, Mailardevpally, Nawab Saheb Kunta, Hyd,
+                        500005
+                    </p>
+                </div>
+
+                <!-- Second Section 1 -->
+                <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-4 w-full">
+
+                    <div>
+                        <h3 class="footer-head">Classes</h3>
+                        <ul class="footer-text flex flex-col space-y-2">
+                            <li>Classroom courses</li>
+                            <li>Virtual classroom courses</li>
+                            <li>E-learning courses</li>
+                            <li>Video Courses</li>
+                            <li>Offline Courses</li>
+                        </ul>
+                    </div>
+                    <!-- 2 -->
+                    <div>
+                        <h3 class="footer-head">Community</h3>
+                        <ul class="footer-text flex flex-col space-y-2">
+                            <li>Learners</li>
+                            <li>Parteners</li>
+                            <li>Developers</li>
+                            <li>Transactions</li>
+                            <li>Blog</li>
+                        </ul>
+                    </div>
+                    <!-- 3 -->
+                    <div>
+                        <h3 class="footer-head">Quick links</h3>
+                        <ul class="footer-text flex flex-col space-y-2">
+                            <li>Home</li>
+                            <li>Professional Education</li>
+                            <li> courses</li>
+                            <li>Admissions</li>
+                            <li>Testimonial</li>
+                            <li>Programs</li>
+                        </ul>
+                    </div>
+                    <!-- 4 -->
+                    <div>
+                        <h3 class="footer-head">More</h3>
+                        <ul class="footer-text flex flex-col space-y-2">
+                            <li>Press</li>
+                            <li>Investors</li>
+                            <li>Terms</li>
+                            <li>Privacy</li>
+                            <li>Help</li>
+                            <li>Contact</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
 
 
 
