--- a/index.html
+++ b/index.html
@@ -558,6 +558,25 @@
                 </div>
             </div>
         </section>
+        <!--................................................................... footer logo bar........................................... -->
+        <section class="bg-gradient-to-r from-footerbarbg2 to-footerbarbg1 p-5">
+            <div class="flex flex-row justify-center items-center gap-2 md:gap-5 lg:gap-5">
+                <img class="bg-white p-2 rounded-full" src="./public/insta.png">
+                <img class="bg-white p-2 rounded-full" src="./public/WhatsApp.png">
+                <img class="bg-white p-2 rounded-full" src="./public/Twitter.png">
+                <img class="bg-white p-2 rounded-full" src="./public/LinkedIn.png">
+                <img class="bg-white p-2 rounded-full" src="./public/YouTube.png">
+            </div>
+
+        </section>
+        <!-- ...................................................................copywrites.................................................. -->
+        <section class="bg-copywrites">
+
+            <p class="text-primary font-Righteous text-sm text-center">Copyright @ 2024 askmeidentity. All Rights
+                Reserved</p>
+
+        </section>
+
 
 
 
