hero left completed with response right side pending

--- a/index.html
+++ b/index.html
@@ -68,24 +68,58 @@
 
 
     <!-- ........................................................................hero section.................................................. -->
-    <!-- <section class="container overflow-x-hidden">
-        <div class="bg-gradient-to-r from-herogradient1 to-herogradient2 flex flex-col justify-around w-full">
-            <div class="flex flex-col">
-                <p>Successful coaches are visionaries</p>
-                <h1>Good coaching is good teaching & nothing else.</h1>
-                <div>
-                    <button>View course</button>
-                    <p>Get Free Consultation</p>
+    <section class="bg-gradient-to-r from-herogradient1 to-herogradient2 py-12">
+        <div class="flex flex-col lg:flex-row justify-between items-center gap-8 px-4">
+            <!-- Left Content -->
+            <div class="lg:text-left max-w-md mx-auto lg:ml-24 px-4 lg:px-0">
+                <!-- Visionary Text -->
+                <p class="font-Righteous text-primary text-lg text-center lg:text-left">
+                    Successful coaches are visionaries
+                </p>
+
+                <!-- Heading -->
+                <h1 class="text-primary text-3xl lg:text-6xl text-center lg:text-justify mt-4">
+                    Good <span class="text-[#0E38CD]">Coaching</span> is good teaching & nothing else.
+                </h1>
+
+                <!-- View Course Section -->
+                <div class="flex flex-col lg:flex-row items-center lg:items-baseline gap-4 lg:gap-12 mt-6 mb-8">
+                    <button class="text-white px-6 py-2 rounded border border-primary hover:underline">
+                        View Courses
+                    </button>
+                    <p class="cursor-pointer hover:underline text-primary">
+                        Get Free Consultation
+                    </p>
                 </div>
-            </div> -->
-    <!-- ....................................................heroleft ................................................................-->
-    <!-- <div class="flex relative">
-                <img class="h-96" src="./public/women-laptop.png" alt="Woman with Laptop">
-                <img class="h-96" src="./public/whiteimg.png" alt="Background Illustration">
+
+                <!-- Input Box -->
+                <div class="relative w-full mx-auto lg:max-w-md mt-6 mb-16">
+                    <input type="text" placeholder="What do you want to learn today?"
+                        class="w-full pl-4 pr-14 py-3 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-purple-500" />
+                    <button type="button"
+                        class="absolute right-2 top-1/2 -translate-y-1/2 bg-gradient-to-r from-buttongradient1 to-buttongradient2 px-4 py-2 rounded text-white focus:ring-2 focus:outline-none">
+                        <div class="flex flex-row gap-1 items-center">
+                            <img class="h-4 w-4" src="./public/search.png" alt="Search">
+                            <p>Search</p>
+                        </div>
+                    </button>
+                </div>
+            </div>
+
+            <!-- Right Content -->
+            <div class="text-center lg:text-left max-w-md">
+                <h1 class="text-xl lg:text-2xl font-bold text-gray-900">Shyam</h1>
+                <p class="text-gray-700 mt-2">
+                    In a coaching role, you ask the questions and rely more on your staff, who become the experts, to
+                    provide the information.
+                </p>
+                <p class="text-gray-600 mt-1">4.9</p>
+                <img class="h-64 lg:h-96 mx-auto lg:mx-0 mt-4" src="./public/women-laptop.png" alt="Woman with laptop">
             </div>
         </div>
     </section>
-    <br> -->
+
+
     <!-- .........................................................featuredcourse............................................................. -->
     <section class="container overflow-x-hidden bg-gradient-to-r from-featuresbg1 to-featuresbg2 w-full">
         <img class="px-10 md:px-10 lg:px-40" src="./public/featurescourse.png">
