--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="flex flex-col lg:flex-row justify-between items-center gap-8 px-4">
             <!-- Left Content -->
             <div class="lg:text-left max-w-md mx-auto lg:ml-24 px-4 lg:px-0">
-                <!-- Visionary Text -->
+
                 <p class="font-Righteous text-primary text-lg text-center lg:text-left">
                     Successful coaches are visionaries
                 </p>
@@ -107,16 +107,45 @@
             </div>
 
             <!-- Right Content -->
-            <div class="text-center lg:text-left max-w-md">
-                <h1 class="text-xl lg:text-2xl font-bold text-gray-900">Shyam</h1>
-                <p class="text-gray-700 mt-2">
-                    In a coaching role, you ask the questions and rely more on your staff, who become the experts, to
-                    provide the information.
-                </p>
-                <p class="text-gray-600 mt-1">4.9</p>
-                <img class="h-64 lg:h-96 mx-auto lg:mx-0 mt-4" src="./public/women-laptop.png" alt="Woman with laptop">
+            <div class="text-center lg:text-left max-w-md relative">
+                <!-- ............shyam float....................................... -->
+                <div class="flex flex-row absolute -top-[26px] -left-[448px] md:hidden lg:flex-row lg:flex">
+                    <img class="" src="./public/herovertical.png">
+                    <div class="flex flex-col ">
+                        <p class="text-primary">Shyam</p>
+                        <p class="text-primary">In a coaching role, you ask the
+                            <br>questions and rely more on your<br>
+                            staff, who become the experts, to<br>
+                            provide the information.
+                        </p>
+                        <p class="text-[#0094E7]">4.0</p>
+
+                    </div>
+
+                </div>
+                <!-- hero arch -->
+                <!-- <div class="">
+                    <img class=" absolute h-16 right-[647px] top-[400px]" src="./public/heroarch1.png">
+                    <img class=" absolute h-18 right-[647px] top-[400px]" src="./public/heroarch2.png">
+                    <img class=" absolute h-16 right-[647px] top-[400px]" src="./public/heroarch3.png">
+                </div> -->
+                <!-- .........................................women img................. -->
+                <img class="h-64 lg:h-96 mx-auto lg:mx-0 mt-4 pr-24 pb-0" src="./public/women-laptop.png"
+                    alt="Woman with laptop">
             </div>
         </div>
+    </section>
+    <!-- .......................................................music................................................................ -->
+    <section class="bg-gradient-to-b from-musicbg1 to-musicbg2">
+        <div class="flex flex-row justify-around items-center gap-10 text-center p-5 flex-wrap">
+            <img class="h-10" src="./public/sportify.png">
+            <img class="h-10" src="./public/amazon.png">
+            <img class="h-10" src="./public/sportify.png">
+            <img class="h-15" src="./public/ciscio.png">
+            <img class="h-10" src="./public/logitech.png">
+            <img class="h-10" src="./public/amazon.png">
+        </div>
+
     </section>
 
 
@@ -479,11 +508,11 @@
                             The guidance was superb and the way of explaining was excellent.
                         </p>
                         <div class="flex justify-start mt-4 pl-1 pr-2">
-                            <img src="./public/Star 6.png" alt="" class="p-1" />
-                            <img src="./public/Star 6.png" alt="" class="p-1" />
-                            <img src="./public/Star 6.png" alt="" class="p-1" />
-                            <img src="./public/Star 6.png" alt="" class="p-1" />
-                            <img src="./public/Star 10.png" alt="" class="p-1" />
+                            <img src="./public/teststar.png" alt="" class="p-1" />
+                            <img src="./public/teststar.png" alt="" class="p-1" />
+                            <img src="./public/teststar.png" alt="" class="p-1" />
+                            <img src="./public/teststar.png" alt="" class="p-1" />
+                            <img src="./public/testemptystar.png" alt="" class="p-1" />
                         </div>
                     </div>
                     <!-- Card 2 -->
@@ -522,14 +551,12 @@
                     </div>
                 </div>
 
-                <div class="flex mt-28 pb-12 items-end gap-2 justify-end pr-5">
-                    <button class="p-3 rounded-full hover:shadow-lg hover:border-2 hover:border-amber-500">
-                        <img class="transform transition duration-300 ease-in-out hover:scale-10 hover:brightness-125 hover:contrast-125"
-                            src="./public/testleftarrow.png" alt="Left Arrow">
+                <div class="flex mt-28 pb-12 items-end gap-2 justify-end  items-center pr-5">
+                    <button class="p-3"></button>
+                    <img class="" src="./public/testleftarrow.png" alt="Left Arrow">
                     </button>
-                    <button class="p-3 rounded-full hover:shadow-lg hover:border-2 hover:border-amber-500">
-                        <img class="transform transition duration-300 ease-in-out hover:scale-10 hover:brightness-125 hover:contrast-125"
-                            src="./public/testrightarrow.png" alt="Right Arrow">
+                    <button class="p-3">
+                        <img class="" src="./public/testrightarrow.png" alt="Right Arrow">
                     </button>
                 </div>
             </div>
