header font style changes

--- a/index.html
+++ b/index.html
@@ -33,29 +33,30 @@
 
             <!-- Navigation Links -->
             <ul class="flex space-x-3 nav-links hidden md:flex">
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Pricing</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#" class="header-text">Services</a></li>
+                <li><a href="#" class="header-text">Pricing</a></li>
+                <li><a href="#" class="header-text">About</a></li>
+                <li><a href="#" class="header-text">Contact</a></li>
             </ul>
 
             <!-- Navigation Icons -->
             <ul class="flex space-x-3 nav-icons hidden md:flex">
-                <li><img src="./public/cart symbol.png"></li>
-                <li><img src="./public/profile.png"></li>
-                <li><img src="./public/search.png"></li>
+                <li><b><img src="./public/cart symbol.png"></b></li>
+                <li><b><img src="./public/profile.png"></b></li>
+                <li><b><img src="./public/search.png"></b></li>
             </ul>
 
             <!-- Navigation Buttons -->
             <ul class="flex space-x-3 nav-buttons hidden md:flex">
                 <li>
-                    <button class="px-5 py-3 hover:bg-gradient-to-r from-buttongradient1 to-buttongradient2 rounded-lg">
+                    <button
+                        class="px-5 py-3 hover:bg-gradient-to-r from-buttongradient1 to-buttongradient2 hover:text-primary rounded-lg underline">
                         Login
                     </button>
                 </li>
                 <li>
                     <button
-                        class="px-5 py-3 hover:bg-gradient-to-r from-buttongradient1 to-buttongradient2 cursor-pointer rounded-lg">
+                        class="px-5 py-3 hover:bg-gradient-to-r from-buttongradient1 to-buttongradient2 cursor-pointer rounded-lg hover:text-primary underline">
                         Sign Up
                     </button>
                 </li>
